# testclass

./: autobuild.bat  conf.py  encrypt.py  gui.py  main.ipynb  pyproject.toml  tox.ini
